--- a/style.css
+++ b/style.css
@@ -17,3 +17,42 @@ body {
     min-height: 100vh;
     display: flex;
 }
+
+.image-section {
+    background-position: center center;
+    background-image: url("./leaf-image.jpg");
+    background-size: cover;
+    display: flex;
+    flex: 3;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+    text-align: center;
+}
+
+a {
+    color: white;
+}
+
+.banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 5.5rem;
+    font-family: "Norse Bold";
+    margin-top: 20vh;
+    padding: 16px 0; 
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.banner img {
+    height: 125px;
+}
+
+.banner h2 {
+    margin: 0;
+}
+
+.attribution {
+    font-size: 0.9rem;
+}
