--- a/style.css
+++ b/style.css
@@ -56,3 +56,83 @@ a {
 .attribution {
     font-size: 0.9rem;
 }
+
+.text-section {
+    display: flex;
+    flex: 5;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #f9fafb;
+}
+
+.text-section > p {
+    font-size: 1.4rem;
+    margin-left: var(--left-space);
+    font-weight: bold;
+    max-width: 80%;
+    margin-bottom: 8px;
+}
+
+.text-section p:first-child {
+    margin-top: 0;
+}
+
+.inputs-section {
+    color: black;
+    background-color: white;
+    margin-top: 32px;
+    padding-top: 16px;
+    padding-bottom: 16px;
+    padding-left: var(--left-space);
+    box-shadow: 0 5px 5px 4px rgba(0, 0, 0, 0.1);
+}
+
+.inputs-section label {
+    font-size: 0.7rem;
+    letter-spacing: 0.1rem;
+    margin-bottom: 1px;
+}
+
+.inputs-section input {
+    box-sizing: border-box;
+    border: 1px solid #e5e7eb;
+    border-radius: 4px;
+    padding: 4px 8px;
+    width: 100%;
+    font-size: 1rem;
+    margin-right: 32px;
+}
+
+.inputs-section h3 {
+    font-size: 1.25rem;
+    font-weight: 400;
+    margin-top: 0;
+    margin-bottom: 24px;
+}
+
+.inputs > div {
+    display: flex;
+    flex-wrap: wrap;
+    column-gap: 84px;
+    row-gap: 18px;
+    margin-bottom: 18px;
+}
+
+.inputs label {
+    display: block;
+}
+
+input.focus {
+    border: 1px solid blue;
+    box-shadow: 2px 1px 2px 2px rgba(0, 0, 0, 0.1);
+}
+
+input.error {
+    border: 1px solid red;
+}
+
+.error-message {
+    margin-top: 0;
+    font-size: 0.8rem;
+    color: red;
+}
