--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ a {
     font-size: 5.5rem;
     font-family: "Norse Bold";
     margin-top: 20vh;
-    padding: 16px 0; 
+    padding: 16px 0;
     background-color: rgba(0, 0, 0, 0.4);
 }
 
@@ -135,4 +135,30 @@ input.error {
     margin-top: 0;
     font-size: 0.8rem;
     color: red;
+}
+
+#create-account {
+    margin-left: var(--left-space);
+    margin-top: 32px;
+    border: none;
+    background-color: #596D48;
+    padding: 12px 48px;
+    border-radius: 8px;
+    box-shadow: 2px 5px 5px 4px rgba(0, 0, 0, 0.1);
+    cursor: pointer;
+    color: white;
+    font-weight: 700;
+    font-size: 1.1rem;
+}
+
+p.log-in {
+    font-weight: 400;
+    font-size: 1rem;
+    margin-top: 32px;
+}
+
+.log-in a {
+    color: #596D48;
+    font-weight: bold;
+    text-decoration: none;
 }
